--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
 
 // ---- CONFIG ----
-const APIKEY = "YiJ7qDsFuV5j0ew_vDO76BT4Bo4yMILwhZF25a8mBap4A2H8J6zIG5kdJLpz7QtxcipY5xRe_btTtZTlBp33S1cZCx2TtiSz-nMihR_tWuUSAjV_9HIzQF-bn-UgSP-9w";
+const APIKEY = YiJ7qDsFuV5j0ew_vDO76BT4Bo4yMILwhZF25a8mBap4A2H8J6zIG5kdJLpz7QtxcipY5xRe_btTtZTlBp33S1cZCx2TtiSz-nMihR_tWuUSAjV_9HIzQF-bn-UgSP-9w;
 const MODELS = ["ecmwf", "icon-eu", "harmonie-dmi", "swiss4x4"];
 
 const AREA = {
