--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <script>
 
 // ---- CONFIG ----
-const APIKEY = "YiJ7qDsFuV5j0ew_vDO76BT4Bo4yMILwhZF25a8mBap4A2H8J6zIG5kdJLpz7QtxcipY5xRe_btTtZTlBp33S1cZCx2TtiSz-nMihR_tWuUSAjV_9HIzQF-bn-UgSP-9w";
 const MODELS = ["ecmwf", "icon-eu", "harmonie-dmi", "swiss4x4"];
 
 const AREA = {
@@ -38,8 +37,8 @@ let polygonLayer = L.layerGroup().addTo(map);
 
 // ---- MAIN FETCH ----
 async function fetchField(model, lat, lon, param) {
-  const url = 
-    `https://api.meteologix.com/latest/${param}/${lat},${lon}/json?model=${model}&apikey=${APIKEY}`;
+  const url = `https://test.estoniaweather.workers.dev/?endpoint=/latest/${param}/${lat},${lon}/json?model=${model}`;
+
 
   const r = await fetch(url);
   const j = await r.json();
