--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ let polygonLayer = L.layerGroup().addTo(map);
 
 // ---- MAIN FETCH ----
 async function fetchField(model, lat, lon, param) {
-  const url = `https://test.estoniaweather.workers.dev/?endpoint=/latest/${param}/${lat},${lon}/json?model=${model}`;
+  const url =
+  `https://test.estoniaweather.workers.dev/?endpoint=/latest/${param}/${lat},${lon}/json?model=${model}`;
 
 
   const r = await fetch(url);
